# Muka-TaskSwitch

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: release.yml
src/: config.rs  hotkey.rs  main.rs  tray.rs  window_manager.rs
