[package]
name = "muka-taskswitch"
version = "1.0.0"
edition = "2021"
rust-version = "1.90"
description = "A Rust + egui window switcher and taskbar utility for Windows"
authors = ["Attect"]
license = "MIT"
repository = "https://github.com/Attect/Muka-TaskSwitch"

[dependencies]
egui = "0.33"
egui-winit = "0.33"
egui_glow = { version = "0.33", features = ["winit"] }
glow = "0.16"
winit = "0.30"
glutin = "0.32"
glutin-winit = "0.5"
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_Com",
    "Win32_UI_Accessibility",
    "Win32_UI_HiDpi",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Registry",
] }
tray-icon = "0.24"
global-hotkey = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "6.0"
raw-window-handle = "0.6"

[profile.release]
opt-level = 3
lto = true
strip = true
